Istio/online-boutique/task1/task1.1_gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: frontend-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - "onlineboutique.example.com"
      port:
        name: http
        number: 80
        protocol: HTTP
